--- a/Exam/MVC/MyCheckedListNet46/MyCheckedListNet46/Views/Home/Index.cshtml
+++ b/Exam/MVC/MyCheckedListNet46/MyCheckedListNet46/Views/Home/Index.cshtml
@@ -7,6 +7,9 @@
     <h1>Member: @Session["MemberName"]</h1>
 </div>
 
+<div class="row">
+    @Html.ActionLink("Demo for item list", "Index", "Item")
+</div>
 <!--
 <div class="jumbotron">
         <h1>ASP.NET</h1>
